# CSC481-581_Object_Centric_GameObjects

./: CMakeLists.txt  README.md  README_tmp.html
src/: GameObject.cpp  GameObject.hpp  Rectangle.cpp  Rectangle.hpp  main.cpp
